implement CLI loader using OpenSearch

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
 DOCKER_VOLUME_DIRECTORY=C:\concierge-docker
-OPENSEARCH_INITIAL_ADMIN_PASSWORD=ThisIsAT3stP@ssw0rd
+OPENSEARCH_INITIAL_ADMIN_PASSWORD=changeThisToSomethingGood!
